# OTUS_homework

./: requirements.txt
HW/: README.md
HW/homework_01/: main.py
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  app.py  pyproject.toml
homework_04/: docker-compose.yml  jsonplaceholder_requests.py  main.py  models.py
homework_05/: __init__.py  app.py
homework_05/templates/: base.html  index.html
homework_06/: docker-compose.yml  requirements.txt
homework_06/app-api-flask/: app.py  config.py  requirements.txt
homework_06/app-api-flask/forms/: __init__.py  posts.py
homework_06/app-api-flask/migrations/versions/: 39b30846e634_initial_migration.py
homework_06/app-api-flask/models/: __init__.py  create_db_column.py  jsonplaceholder_requests.py  sql_request.py
homework_06/app-api-flask/templates/: about.html  base.html  index.html
homework_06/app-api-flask/templates/posts/: add.html  details.html  list_posts.html
homework_06/docker-build/: Dockerfile
