[tool.poetry]
name = "poetry-homework03"
version = "0.1.0"
description = ""
authors = ["disugiske <disugiske@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
docker = "^5.0.3"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
